microservices/spred.api.submission/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: submission-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8080
  selector:
    app: submission-service
